<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.loginAndRegister.IntroScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/image_150"
        android:layout_height="@dimen/image_150"
        android:src="@drawable/moviepedia_logo"
        app:layout_constraintBottom_toTopOf="@id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appName"
        style="@style/heading_bold_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_5"
        android:text="@string/intro_screen_app_name"
        app:layout_constraintBottom_toTopOf="@id/app_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_description"
        style="@style/paragraph_16_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_screen_sub_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        style="@style/red_button_16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_30"
        android:text="@string/intro_screen_login_btn"
        app:layout_constraintBottom_toTopOf="@id/noAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noAcc"
        style="@style/paragraph_14_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/intro_screen_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/app_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_description" />

    <TextView
        android:id="@+id/registerBtn"
        style="@style/paragraph_16_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_10"
        android:text="@string/intro_screen_register_btn"
        app:layout_constraintBottom_toBottomOf="@id/noAcc"
        app:layout_constraintStart_toEndOf="@+id/noAcc"
        app:layout_constraintTop_toTopOf="@id/noAcc" />

    <TextView
        android:id="@+id/forgot_login_credentials"
        style="@style/paragraph_14_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_20"
        android:text="@string/intro_screen_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>