<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        tools:context=".ui.intro.fragments.RegisterFragment" >

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="314dp"
                android:layout_height="410dp"
                android:layout_gravity="center"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/registerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center_horizontal"
                        android:lineSpacingExtra="4sp"
                        android:text="@string/register_dialog_register_header"
                        android:textColor="#1d1d1d"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/registerTitle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerEmailField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:drawableStart="@drawable/ic_mail_icon"
                            android:drawablePadding="15dp"
                            android:hint="@string/register_dialog_email_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/registerPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/registerEmail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerPasswordField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:drawableStart="@drawable/ic_password_icon"
                            android:drawablePadding="15dp"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:hint="@string/register_dialog_pass_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/registerPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/registerPassword">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerPasswordConfirmField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:drawableStart="@drawable/ic_password_icon"
                            android:drawablePadding="15dp"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:hint="@string/register_dialog_conf_pass_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/registerAccBtn"
                        android:layout_width="266dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/round_button"
                        android:text="@string/register_dialog_register_btn"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/registerPasswordConfirm" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>