<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="viewModel"
            type="com.stathis.moviepedia.ui.dashboard.home.MovAndTvSeriesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        tools:context=".ui.dashboard.home.DashboardFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingMoviesRecView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_16"
                android:adapter="@{viewModel.upcomingAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/all_popular_header"
                style="@style/paragraph_16_white_bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcomingMoviesRecView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adapter="@{viewModel.trendingAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/all_genres_header"
                style="@style/paragraph_16_white_bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularRecView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genresRecView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adapter="@{viewModel.genresAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genres" />

            <TextView
                android:id="@+id/topRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/all_toprated_header"
                style="@style/paragraph_16_white_bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genresRecView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedRecView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:adapter="@{viewModel.topRatedAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topRated" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>